--- a/nftables/nftables.conf
+++ b/nftables/nftables.conf
@@ -1,23 +1,18 @@
-# Configuration for /etc/nftables
-
-# Location of file with nftables rules to restore on service start,
-# and save rules to on service stop when $save_on_stop is enabled.
-rules_file="/etc/nftables.nft"
-
-# Options to pass to nft on save.
-#save_options="-n"
-
-# Save state on stopping nftables (this will overwrite $rules_file).
-#save_on_stop="no"
-
-# Enable IPv4/IPv6 forwarding with the rules?
-# Note: If you want to enable forwarding only on selected interfaces,
-# keep this disabled and enable forwarding using /etc/sysctl.conf.
-#enable_forwarding="no"
-
-# If you need to log nftables messages as soon as nftables starts,
-# AND your logger does NOT depend on the network, then you may wish
-# to uncomment the next line.
-# If your logger depends on the network, and you uncomment this line
-# you will create an unresolvable circular dependency during startup.
-#rc_use="logger"
+#
+# This file will contain your nftables rules and
+# is read by the runit service when restarting
+#
+# These provide an iptables like set of filters
+# (uncomment to include)
+# include "/etc/nftables/arp-filter.nft"
+# include "/etc/nftables/bridge-filter.nft"
+# include "/etc/nftables/inet-filter.nft"
+# include "/etc/nftables/ipv4-filter.nft"
+# include "/etc/nftables/ipv4-mangle.nft"
+# include "/etc/nftables/ipv4-nat.nft"
+# include "/etc/nftables/ipv4-raw.nft"
+# include "/etc/nftables/ipv6-filter.nft"
+# include "/etc/nftables/ipv6-mangle.nft"
+# include "/etc/nftables/ipv6-nat.nft"
+# include "/etc/nftables/ipv6-raw.nft"
+# include "/etc/nftables/basic-firewall.nft"
